--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
     <section class="chat-box">
         <h2>Projects</h2>
 
-        <div class="project-item">
-            <img src="project-image.png" alt="Project Image">
-            <h3> <a href="" target="_blank" rel="noopener noreferrer"></a></h3>
-            <p>Description of your project and a link: <a href="#">Link</a></p>
+        <div class="Portfolio">
+            <h3> <a href="https://github.com/trixteneandrei/TrxiteneAndreiPortfolio" target="_blank" rel="noopener noreferrer">Portfolio Website</a></h3>
+            <p>This website is in itself also a project. I've made it by using basic HTML and CSS.</p>
+            <img src="Portfolio.png" alt="Portfolio">
         </div>
 
         <div class="SFBWeb">
