--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
 
         <div class="BBallGame">
-            <h3> <a href="https://scratch.mit.edu/projects/1043565066" target="_blank" rel="noopener noreferrer">Moving Vehicle</a></h3>
+            <h3> <a href="https://scratch.mit.edu/projects/1043565066" target="_blank" rel="noopener noreferrer">Basketball Game</a></h3>
             <p>Basketball is a passion of mine, so I drew inspiration to create this game. Use the arrow keys (up, down, left, right) to move your player around the court and press the space key to shoot the basketball towards the hoop. Navigate carefully to avoid the defender; if she catches up to you, it's game over. The goal is to score as many points as possible by making successful shots while evading the defender's attempts to stop you.</p>
             <img src="BBallGame.png" alt="BBallGame">
         </div>
